@@ -1,3 +1,7 @@
+2020-01-18  Frank Ch. Eigler  <fche@redhat.com>
+
+	* debuginfod.cxx (thread_main_scanner): Handle empty source_paths[].
+
 2020-01-11  Frank Ch. Eigler  <fche@redhat.com>
 
 	* debuginfod.cxx (libarchive_fdcache): New class/facility to own a
